[package]
name = "etcd-config-management-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.118"

# requries protobuf-compiler [apt-get install protobuf-compiler]
etcd-client = "0.13.0"
